// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilePopoverContent component snapshot default 1`] = `
<Fragment>
  <div
    className="help-popover-option"
  >
    <strong>
      <FormattedMessage
        defaultMessage="File Name"
        description="Popover title for file name"
        id="ora-grading.FilePopoverContent.filePopoverNameTitle"
      />
    </strong>
    <br />
    some file name
  </div>
  <div
    className="help-popover-option"
  >
    <strong>
      <FormattedMessage
        defaultMessage="File Description"
        description="Popover title for file description"
        id="ora-grading.FilePopoverCellContent.filePopoverDescriptionTitle"
      />
    </strong>
    <br />
    long descriptive text...
  </div>
  <div
    className="help-popover-option"
  >
    <strong>
      <FormattedMessage
        defaultMessage="File Size"
        description="Popover title for file size"
        id="ora-grading.FilePopoverCellContent.fileSizeTitle"
      />
    </strong>
    <br />
    filesize(6000)
  </div>
</Fragment>
`;

exports[`FilePopoverContent component snapshot invalid size 1`] = `
<Fragment>
  <div
    className="help-popover-option"
  >
    <strong>
      <FormattedMessage
        defaultMessage="File Name"
        description="Popover title for file name"
        id="ora-grading.FilePopoverContent.filePopoverNameTitle"
      />
    </strong>
    <br />
    some file name
  </div>
  <div
    className="help-popover-option"
  >
    <strong>
      <FormattedMessage
        defaultMessage="File Description"
        description="Popover title for file description"
        id="ora-grading.FilePopoverCellContent.filePopoverDescriptionTitle"
      />
    </strong>
    <br />
    long descriptive text...
  </div>
  <div
    className="help-popover-option"
  >
    <strong>
      <FormattedMessage
        defaultMessage="File Size"
        description="Popover title for file size"
        id="ora-grading.FilePopoverCellContent.fileSizeTitle"
      />
    </strong>
    <br />
    Unknown
  </div>
</Fragment>
`;
